tests/ucc/type/bad/void-vs-record.c
struct a
{
    void b;
};

int main(void)
{
    return 0;
}
